--- a/stylesheets/breathe/navmenu.css
+++ b/stylesheets/breathe/navmenu.css
@@ -36,7 +36,7 @@
   font-size: 85%;
   font-weight: normal;
   height: 35px;
-  margin: 0 0 -5px;
+  margin: 0;
   padding: 0;
   text-transform: uppercase;
   width: 100%;
@@ -65,7 +65,7 @@ div:not(#navbar_second_level) .wrap:first-of-type {
 #navbar_second_level li {
   display: inline;
   float: left;
-  height: 30px;
+  height: 29px  ;
   margin: 0 0 0 5px;
   min-width: 50px;
   padding: 0;
@@ -97,9 +97,9 @@ div:not(#navbar_second_level) .wrap:first-of-type {
   border-radius: 10px 10px 0 0;
   color: #E6E6D8;
   display: block;
-  line-height: 3.2;
+  line-height: 3;
   margin: 0;
-  padding: 0 0.5em;
+  padding: 0 0.6em;
   text-decoration: none;
   -moz-border-radius: 10px 10px 0 0;
   -webkit-border-radius: 10px 10px 0 0;
