--- a/stylesheets/breathe/screen.css
+++ b/stylesheets/breathe/screen.css
@@ -15,7 +15,6 @@
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, code, del, dfn, em, img, q, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, dialog, figure, footer, header, hgroup, nav, section {margin:0;padding:0;border:0;font-weight:inherit;font-style:inherit;font-size:100%;font-family:inherit;vertical-align:baseline;}
 article, aside, dialog, figure, footer, header, hgroup, nav, section {display:block;}
 table {border-collapse:separate;border-spacing:0;}
-tbody{width:100%;}
 caption, th, td {text-align:left;font-weight:normal;}
 table, td, th {vertical-align:middle;}
 blockquote:before, blockquote:after, q:before, q:after {content:"";}
@@ -112,9 +111,9 @@ form input[type="text"],input[type="password"], input.text, input[type="email"],
      -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   font-size: 120%;
-  margin:0 0 5px;
+  margin:0 0 2%;
   padding: 7px 8px;
-  width: 90%;
+  width: 100%;
 }
 table .fieldWithErrors input, table .fieldWithErrors select{
   border-color: #F66;
