--- a/stylesheets/breathe/puavo.css
+++ b/stylesheets/breathe/puavo.css
@@ -761,18 +761,21 @@ table.list {
   color:#fff;
 }
 .btn-success{
-  background-color: #4E9E4E;
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4E9E4E), to(#51a351));
-  background-image: -webkit-linear-gradient(top, #4E9E4E, #51a351);
-  background-image: -o-linear-gradient(top, #4E9E4E, #51a351);
-  background-image: linear-gradient(to bottom, #4E9E4E, #51a351);
-  background-image: -moz-linear-gradient(top, #4E9E4E, #51a351);
-  background-image: -ms-linear-gradient(top, #4E9E4E, #51a351);
+  background-color: #60C260;
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#60C260), to(#51a351));
+  background-image: -webkit-linear-gradient(top, #60C260, #51a351);
+  background-image: -o-linear-gradient(top, #60C260, #51a351);
+  background-image: linear-gradient(to bottom, #60C260, #51a351);
+  background-image: -moz-linear-gradient(top, #60C260, #51a351);
+  background-image: -ms-linear-gradient(top, #60C260, #51a351);
   background-repeat: repeat-x;
   color:#fff;
 }
+.btn:hover{
+  background: #f5f5f5;
+}
 .btn-danger:hover{
-  background-color: #bd362f;
+  background: #D14836;
   color: #ffffff;
 }
 .btn-success:hover{
